// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard component should display credit card form 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $60
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={false}
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should display loader while fetching stripe SDK 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`CreditCard component should not render the billing address form when a credit card has been added and the contact information is valid 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $60
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={false}
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should render billing plan card with automation footer when current plan is not active and has automation add-on 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $62
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={
        <React.Fragment>
          <AutomationAmount
            addOnAmount={2}
            currency="usd"
            editable={false}
            fullAddOnAmount={2}
            interval="month"
          />
          <TotalAmount
            addOnAmount={2}
            amount={60}
            currency="usd"
            interval="month"
            isEditable={false}
          />
        </React.Fragment>
      }
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should render billing plan card with automation footer when current plan is not active and has automation add-on when the automation price is not discounted 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $62
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={
        <React.Fragment>
          <AutomationAmount
            addOnAmount={2}
            currency="usd"
            editable={false}
            interval="month"
          />
          <TotalAmount
            addOnAmount={2}
            amount={60}
            currency="usd"
            interval="month"
            isEditable={false}
          />
        </React.Fragment>
      }
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should render nothing if loaded, but no current subscription is set 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $60
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={false}
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;

exports[`CreditCard component should render the billing address form when account is missing contact information 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer container"
    fluid={true}
    tag="div"
  >
    <div
      className="form"
    >
      <Alert
        className="mb-3"
      >
        You will be charged for the current period of your plan once you add your Credit Card
      </Alert>
      <h3
        className="heading-section-semibold"
      >
        Payment information
      </h3>
      <Form
        onSubmit={[Function]}
        tag="form"
      >
        <InputField
          className="mb16"
          id="name"
          isRequired={true}
          label="Name on the card"
          onChange={[Function]}
          placeholder="Marie Curie"
          value=""
        />
        <div
          className="row mb32"
        >
          <InputField
            className="inputRow"
            id="number"
            isRequired={true}
            label="Card number"
            onChange={[Function]}
            placeholder="4657 7894 1234 7895"
            value=""
          />
          <InputField
            className="inputRow"
            id="expDate"
            isRequired={true}
            label="Expiry date"
            onChange={[Function]}
            placeholder="05 / 21"
            value=""
          />
          <InputField
            className="inputRow"
            id="cvc"
            isRequired={true}
            label="CVC"
            onChange={[Function]}
            placeholder="693"
            value=""
          />
        </div>
        <h3
          className="heading-section-semibold"
        >
          Billing address
        </h3>
        <BillingAddressInputs
          onChange={[Function]}
          value={
            Object {
              "email": "",
              "shipping": Object {
                "address": Object {
                  "city": "",
                  "country": "",
                  "line1": "",
                  "line2": "",
                  "postal_code": "",
                  "state": "",
                },
                "name": "",
                "phone": "",
              },
            }
          }
        />
        <FormGroup
          color="danger"
          tag="div"
        >
          <Errors />
        </FormGroup>
        <ForwardRef
          isDisabled={true}
          isLoading={false}
          type="submit"
        >
          Add payment method
           
           and pay $60
        </ForwardRef>
        <TaxDisclaimer
          className="taxDisclaimer"
        />
      </Form>
    </div>
    <BillingPlanCard
      amount={60}
      className="plan"
      currency="usd"
      features={
        Array [
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="playlist_add_check"
            />,
            "label": <BillableTicketsLabel
              costPerTicket={0.4}
              currency="usd"
              freeTickets={300}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="thumb_up"
            />,
            "label": "Facebook, Messenger, Instagram",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="forum"
            />,
            "label": "Live chat",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="phone"
            />,
            "isDisabled": false,
            "label": <React.Fragment>
              <b>
                1
              </b>
               Phone number
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="auto_awesome"
            />,
            "label": "Macros and rules",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="insert_emoticon"
            />,
            "isDisabled": false,
            "label": "Satisfaction surveys",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="web_asset"
            />,
            "isDisabled": false,
            "label": <HelpCenterLabel
              disabled={false}
            />,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="directions_walk"
            />,
            "label": <React.Fragment>
              <b>
                Self
              </b>
               onboarding
            </React.Fragment>,
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="attach_money"
            />,
            "isDisabled": true,
            "label": "Revenue statistics",
          },
          Object {
            "icon": <PlanFeatureVectorIcon
              url="test-file-stub"
            />,
            "isDisabled": true,
            "label": "Magento integration",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="person_pin"
            />,
            "isDisabled": true,
            "label": "Dedicated success manager",
          },
          Object {
            "icon": <PlanFeatureMaterialIcon
              icon="blur_on"
            />,
            "isDisabled": true,
            "label": "Custom services",
          },
        ]
      }
      footer={false}
      interval="month"
      isCurrentPlan={true}
      name="Basic"
      renderBody={[Function]}
    />
  </Container>
</div>
`;
